     all platforms to ensure permissions are the same before and after a ban -
     closes gh-266. hostsdeny supports daemon_list now too.
   * filter.d/roundcube-auth - timezone offset can be positive or negative
   * action.d/bsd-ipfw - action option unsed. Fixed to blocktype for
     consistency. default to port unreach instead of deny
  Rolf Fokkens
   * action.d/dshield.conf and complain.conf -- reorder mailx arguments.
     https://bugzilla.redhat.com/show_bug.cgi?id=998020
  John Doe (ache)
   * action.d/bsd-ipfw.conf - invert actionstop logic to make exist status 0.
     closes gh-343.
  JP Espinosa (Reviewed by O.Poplawski)
   * files/redhat-initd - rewritten to use stock init.d functions thus
     avoiding problems with getpid.  Also $network and iptables moved
     to Should- rc init fields

- New Features:
  Edgar Hoch
	 * action.d/firewall-cmd-direct-new.conf - action for firewalld
     from https://bugzilla.redhat.com/show_bug.cgi?id=979622
  Andy Fragen and Daniel Black
   * filter.d/osx-ipfw.conf - ipfw action for OSX based on random rule
     numbers.
  Anonymous:
   * action.d/osx-afctl - an action based on afctl for osx
  Daniel Black & ykimon
   * filter.d/3proxy.conf -- filter added
  Daniel Black
   * filter.d/exim-spam.conf -- a splitout of exim's spam regexes
     with additions for greater control over filtering spam.
   * add date expression for apache-2.4 - milliseconds
  Christophe Carles & Daniel Black
   * filter.d/perdition.conf -- filter added
  Mark McKinstry
   * action.d/apf.conf - add action for Advanced Policy Firewall (apf)
  Amir Caspi and kjohnsonecl
   * filter.d/uwimap-auth - filter for uwimap-auth IMAP/POP server

- Enhancements:
  François Boulogne and Frédéric
   * filter.d/lighttpd - auth regexs for lighttpd-1.4.31
  Daniel Black
   * jail.conf now has asterisk jail - no need for asterisk-tcp and
	   asterisk-udp. Users should replace existing jails with asterisk to 
		 reduce duplicate parsing of the asterisk log file.